@@ -1,3 +1,105 @@
+// package com.ERP.QMS.config;
+
+// import com.ERP.QMS.security.JwtAuthFilter;
+// import lombok.RequiredArgsConstructor;
+// import org.springframework.beans.factory.annotation.Value;
+// import org.springframework.context.annotation.Bean;
+// import org.springframework.context.annotation.Configuration;
+// import org.springframework.security.authentication.AuthenticationManager;
+// import org.springframework.security.authentication.AuthenticationProvider;
+// import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+// import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+// import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+// import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+// import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+// import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+// import org.springframework.security.config.http.SessionCreationPolicy;
+// import org.springframework.security.core.userdetails.UserDetailsService;
+// import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+// import org.springframework.security.crypto.password.PasswordEncoder;
+// import org.springframework.security.web.SecurityFilterChain;
+// import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+// import org.springframework.web.cors.CorsConfiguration;
+// import org.springframework.web.cors.CorsConfigurationSource;
+// import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+// import java.util.Arrays;
+// import java.util.List;
+
+// @Configuration
+// @EnableWebSecurity
+// @EnableMethodSecurity
+// @RequiredArgsConstructor
+// public class SecurityConfig {
+
+//     private final JwtAuthFilter jwtAuthFilter;
+//     private final UserDetailsService userDetailsService;
+
+//     @Value("${qms.cors.allowed-origins}")
+//     private String allowedOrigins;
+
+//     @Bean
+//     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+//         http
+//             .csrf(AbstractHttpConfigurer::disable)
+//             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+//             .authorizeHttpRequests(auth -> auth
+//     .requestMatchers(
+//        "/auth/**",
+//     "/actuator/health",
+//     "/uploads/**",
+//     "/designations/**",
+//     "/employees/**",
+//     "/audit/nc/plan/**",
+//     "/documents/*/download",
+//     "/mrm/**"
+
+//     ).permitAll()
+//     .anyRequest().authenticated()
+// )
+//             .sessionManagement(session ->
+//                 session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+//             )
+//             .authenticationProvider(authenticationProvider())
+//             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+
+//         return http.build();
+//     }
+
+//     @Bean
+//     public AuthenticationProvider authenticationProvider() {
+//         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+//         provider.setUserDetailsService(userDetailsService);
+//         provider.setPasswordEncoder(passwordEncoder());
+//         return provider;
+//     }
+
+//     @Bean
+//     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+//         return config.getAuthenticationManager();
+//     }
+
+//     @Bean
+//     public PasswordEncoder passwordEncoder() {
+//         return new BCryptPasswordEncoder();
+//     }
+
+//     @Bean
+// public CorsConfigurationSource corsConfigurationSource() {
+//     CorsConfiguration config = new CorsConfiguration();
+//     config.setAllowedOrigins(List.of("https://qms-1-xr3n.onrender.com"));
+//     config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+//     config.setAllowedHeaders(List.of("*"));
+//     config.setAllowCredentials(true);
+//     config.setMaxAge(3600L);
+
+//     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//     source.registerCorsConfiguration("/**", config);
+//     return source;
+// }
+// }
+
+
 package com.ERP.QMS.config;
 
 import com.ERP.QMS.security.JwtAuthFilter;
@@ -19,6 +121,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.http.HttpMethod;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -35,6 +138,8 @@ public class SecurityConfig {
     private final JwtAuthFilter jwtAuthFilter;
     private final UserDetailsService userDetailsService;
 
+    // Comma-separated list from application.properties, e.g.:
+    // qms.cors.allowed-origins=http://localhost:5009,https://qms-1-xr3n.onrender.com
     @Value("${qms.cors.allowed-origins}")
     private String allowedOrigins;
 
@@ -44,19 +149,19 @@ public class SecurityConfig {
             .csrf(AbstractHttpConfigurer::disable)
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .authorizeHttpRequests(auth -> auth
-    .requestMatchers(
-       "/auth/**",
-    "/actuator/health",
-    "/uploads/**",
-    "/designations/**",
-    "/employees/**",
-    "/audit/nc/plan/**",
-    "/documents/*/download",
-    "/mrm/**"
-
-    ).permitAll()
-    .anyRequest().authenticated()
-)
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // let all CORS preflight through
+                .requestMatchers(
+                    "/auth/**",
+                    "/actuator/health",
+                    "/uploads/**",
+                    "/designations/**",
+                    "/employees/**",
+                    "/audit/nc/plan/**",
+                    "/documents/*/download",
+                    "/mrm/**"
+                ).permitAll()
+                .anyRequest().authenticated()
+            )
             .sessionManagement(session ->
                 session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
@@ -85,18 +190,17 @@ public class SecurityConfig {
     }
 
     @Bean
-public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration config = new CorsConfiguration();
-    config.setAllowedOrigins(List.of("https://qms-1-xr3n.onrender.com"));
-    config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-    config.setAllowedHeaders(List.of("*"));
-    config.setAllowCredentials(true);
-    config.setMaxAge(3600L);
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration config = new CorsConfiguration();
+        // Reads from qms.cors.allowed-origins property (comma-separated) instead of a hardcoded single URL
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", config);
-    return source;
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+        return source;
+    }
 }
-}
-
-
